--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+    <!-- Aqui esta el codigo que permite mostrar el apartado de menu en pantalla -->
+    <!--El id del item debe ser igual que el id del navigation -->
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_culture"
+        android:icon="@drawable/ic_baseline_history_edu_24"
+        android:title="@string/title_culture" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_archaeological_zones"
+        android:icon="@drawable/ic_baseline_map_24"
+        android:title="@string/title_archaeological_zones" />
+
+    <item
+        android:id="@+id/navigation_videos"
+        android:icon="@drawable/ic_baseline_smart_display_24"
+        android:title="@string/title_videos" />
 
 </menu>
