--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="jade">#00a86b</color>
+    <color name="green">#5B7801</color>
+    <color name="turquesa">#67BAAD</color>
+
 </resources>
