--- a/app/src/main/res/layout/fragment_culture_container.xml
+++ b/app/src/main/res/layout/fragment_culture_container.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.culture.CultureFragment">
+    tools:context=".ui.culture.CultureContainer">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/CultureList"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
+
 </FrameLayout>
