--- a/app/src/main/res/layout/list_element_culture.xml
+++ b/app/src/main/res/layout/list_element_culture.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal"
             android:padding="6dp">
             <ImageView
-                android:id="@+id/IconImageViewCultureList"
+                android:id="@+id/IconImageView"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
@@ -38,12 +38,12 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/IconImageViewCultureList"
+                android:layout_toEndOf="@+id/IconImageView"
                 android:orientation="vertical"
                 android:layout_marginLeft="4dp"
-                android:layout_toRightOf="@id/IconImageViewCultureList">
+                android:layout_toRightOf="@id/IconImageView">
                 <TextView
-                    android:id="@+id/Texto1"
+                    android:id="@+id/Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -52,7 +52,7 @@
                     android:textSize="24dp"
                     android:textStyle="bold"/>
                 <TextView
-                    android:id="@+id/Texto2"
+                    android:id="@+id/Subtitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hola esta es una prueba"
