--- a/app/src/main/res/layout/list_element_culture.xml
+++ b/app/src/main/res/layout/list_element_culture.xml
@@ -8,70 +8,82 @@
     android:animateLayoutChanges="true"
     app:cardCornerRadius="20dp"
     app:cardElevation="4dp"
-    app:cardUseCompatPadding="true">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+
+    app:cardBackgroundColor="@color/bg_card"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400px"
         android:animateLayoutChanges="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="40px"
+            android:layout_marginTop="95px"
             android:orientation="horizontal"
             android:padding="6dp">
-            <ImageView
-                android:id="@+id/IconImageView"
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardImg"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
+
+                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
-                app:srcCompat="@drawable/ic_baseline_history_edu_24"
-                android:layout_alignParentLeft="true"/>
+                app:cardCornerRadius="100px">
+
+                <ImageView
+                    android:id="@+id/IconImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/historia"
+
+                    />
+            </androidx.cardview.widget.CardView>
+
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/IconImageView"
-                android:orientation="vertical"
+                android:layout_marginStart="20dp"
                 android:layout_marginLeft="4dp"
-                android:layout_toRightOf="@id/IconImageView">
+                android:layout_marginTop="2dp"
+                android:layout_toEndOf="@+id/cardImg"
+                android:layout_toRightOf="@id/cardImg"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
-                    android:text="Codelia"
+                    android:fontFamily="@font/rye_regular"
+                    android:text="Arte Maya"
                     android:textColor="#000"
-                    android:textSize="24dp"
-                    android:textStyle="bold"/>
+                    android:textSize="35dp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/Subtitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Hola esta es una prueba"
+                    android:text="Entra a explorar"
                     android:textColor="#000"
-                    android:textSize="18dp" />
+                    android:textSize="10dp" />
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/Texto3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="6dp"
-                android:layout_marginRight="6dp"
-                android:text="Activo"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"/>
 
         </RelativeLayout>
     </LinearLayout>
