--- a/app/src/main/res/layout/fragment_culture_container.xml
+++ b/app/src/main/res/layout/fragment_culture_container.xml
@@ -6,28 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".ui.culture.CultureContainer">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
-        android:src="@drawable/ic_baseline_smart_display_24" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="286dp"
-        android:layout_height="141dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="88dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="239dp"
-        android:text="TextView" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="@color/bg_card"
+                app:cardCornerRadius="3dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/IconImageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="250dp"
+                        android:background="@drawable/fondo"
+                        app:shapeAppearanceOverlay="@style/SpecificCornerCutCard" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="15dp">
+
+                        <TextView
+                            android:id="@+id/title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/rye_regular"
+                            android:paddingTop="15dp"
+                            android:paddingBottom="15dp"
+                            android:text="Astronomia"
+                            android:textColor="@color/parrafo_color"
+                            android:textSize="50dp" />
+
+                        <TextView
+                            android:id="@+id/text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/text_astronomia"
+                            android:textAlignment="inherit"
+                            android:textColor="@color/parrafo_color"
+                            android:textSize="20dp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+    </ScrollView>
+
 
 </RelativeLayout>
