--- a/app/src/main/res/layout/fragment_videos_web.xml
+++ b/app/src/main/res/layout/fragment_videos_web.xml
@@ -3,10 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.videos.VideosFragment">
+    tools:context=".ui.videos.VideosWebFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/List"
+    <!-- TODO: Update blank fragment layout -->
+
+    <WebView
+        android:id="@+id/WebView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </FrameLayout>
