--- a/AdventureKaan/app/src/main/res/values/colors.xml
+++ b/AdventureKaan/app/src/main/res/values/colors.xml
@@ -7,4 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="bg_nav_bar">#4992F2</color>
+    <color name="bg_nav_bar_v">#7D5CF2</color>
+    <color name="bg_botton_nav">#FFF</color>
+    //#F2CEAE
+    <color name="bg_principal">#FFF</color>
+    <color name="bg_card">#FFF</color>
+    <color name="bg_statusBarColor">#6CC5D9</color>
+    <color name="text_color">#037F8C</color>
+    <color name="parrafo_color">#000</color>
+    <color name="text_color_videos">#FFF</color>
+
 </resources>
