--- a/app/src/main/res/layout/list_element_v2.xml
+++ b/app/src/main/res/layout/list_element_v2.xml
@@ -11,13 +11,13 @@
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
     app:cardBackgroundColor="@color/bg_card"
-
     >
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+       >
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/IconImageView"
