--- a/app/src/main/res/layout/list_element_v3.xml
+++ b/app/src/main/res/layout/list_element_v3.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="180dp"
     android:animateLayoutChanges="true"
     app:cardCornerRadius="10dp"
     android:layout_marginTop="5dp"
@@ -19,13 +19,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="400px">
+        android:layout_height="180dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardImg"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:cardCornerRadius="150px"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            app:cardCornerRadius="180px"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.06"
@@ -46,11 +46,12 @@
             android:layout_width="231dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:fontFamily="@font/rye_regular"
             android:text="¿Qué diferencia a los aztecas de los mayas?"
-            android:textColor="@color/text_color_videos"
             android:textAlignment="center"
-            android:textSize="25dp"
+            android:textColor="@color/text_color_videos"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardImg"
