--- a/AdventureKaan/app/src/main/res/layout/fragment_culture_container.xml
+++ b/AdventureKaan/app/src/main/res/layout/fragment_culture_container.xml
@@ -17,51 +17,66 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:cardBackgroundColor="@color/bg_card"
-                app:cardCornerRadius="3dp">
-
-                <LinearLayout
+                android:layout_height="200dp"
+                app:contentPadding="10dp">
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <com.google.android.material.imageview.ShapeableImageView
+                    app:cardCornerRadius="20dp">
+                    <ImageView
                         android:id="@+id/IconImageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="250dp"
-                        android:background="@drawable/fondo"
-                        app:shapeAppearanceOverlay="@style/SpecificCornerCutCard" />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/fondo"/>
+                </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                app:contentPadding="10dp">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="20dp"
+                    app:cardBackgroundColor="#4DB6AB">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:padding="15dp">
-
+                        android:layout_gravity="center">
                         <TextView
                             android:id="@+id/title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/rye_regular"
-                            android:paddingTop="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Astronomia"
-                            android:textColor="@color/parrafo_color"
-                            android:textSize="50dp" />
-
-                        <TextView
-                            android:id="@+id/text"
+                            android:layout_gravity="center"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/text_astronomia"
-                            android:textAlignment="inherit"
+                            android:fontFamily="@font/rye_regular"
+                            android:text="Astronomia"
+                            android:textAlignment="center"
                             android:textColor="@color/parrafo_color"
-                            android:textSize="20dp" />
-
+                            android:textSize="50dp" />
                     </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-                </LinearLayout>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentPadding="10dp"
+                >
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="20dp"
+                    app:contentPadding="10dp">
+                    <TextView
+                        android:id="@+id/text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/text_astronomia"
+                        android:textAlignment="inherit"
+                        android:textColor="@color/parrafo_color"
+                        android:textSize="20dp" />
+                </androidx.cardview.widget.CardView>
 
             </androidx.cardview.widget.CardView>
 
