--- a/AdventureKaan/app/src/main/res/menu/top_menu.xml
+++ b/AdventureKaan/app/src/main/res/menu/top_menu.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/tercerFragment"
-        android:title="Fragment 3"/>
+        android:title="About Us" />
 </menu>
