--- a/AdventureKaan/app/src/main/res/layout/fragment_zonas_container.xml
+++ b/AdventureKaan/app/src/main/res/layout/fragment_zonas_container.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.culture.CultureContainer"
-    android:background="@drawable/bg_zonas_1">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.zonas.ZonasContainer">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
-
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -54,7 +49,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/rye_regular"
-                            android:text="Astronomia"
+                            android:text="Chichén Itzá"
                             android:textAlignment="center"
                             android:textColor="@color/parrafo_color"
                             android:textSize="50dp" />
@@ -84,10 +79,35 @@
 
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                app:contentPadding="10dp">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="20dp"
+                    app:cardBackgroundColor="#4DB6AB">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center">
+                        <TextView
+                            android:id="@+id/title2"
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/rye_regular"
+                            android:text="Chichén Itzá"
+                            android:textAlignment="center"
+                            android:textColor="@color/parrafo_color"
+                            android:textSize="50dp" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
+
+
         </LinearLayout>
 
     </ScrollView>
-
-
-
-</RelativeLayout>
+</FrameLayout>
